# dapaipai

./: .gitignore  README.md
chamo_pano_map/examples/: pano_map.html  pano_map_editor.html  try.html
cloud_game/: life_game.py  place.py  place2.py  push_file.sh  start_ffmpeg.sh  start_game.sh  try_live_msg.py  try_text.py
cloud_game/live_danmu/live_danmu.xcodeproj/: project.pbxproj
cloud_game/live_danmu/live_danmu.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
cpp/src/bag_tool/: CMakeLists.txt  bag_tool.kdev4  package.xml
cpp/src/bag_tool/.kdev4/: bag_tool.kdev4
cpp/src/bag_tool/include/bag_tool/: extract_bag.h
cpp/src/bag_tool/src/: cv_ios_bridge.h  cv_ios_bridge.mm  extract_bag.cpp  extract_bag_exe.cpp  stitch_algo.cpp  stitch_algo.h  stitch_api.h  stitch_api.mm
cpp/src/bag_tool/src/g2o/src/core/: sparse_optimizer.cpp
cpp/src/bag_tool/src/g2o/src/types/: types_six_dof_expmap.cpp
cpp/src/bag_tool/src/stitching/include/chamo/stitching/: warpers.hpp
cpp/src/bag_tool/src/stitching/include/chamo/stitching/detail/: autocalib.hpp  blenders.hpp  camera.hpp  exposure_compensate.hpp  matchers.hpp  motion_estimators.hpp  seam_finders.hpp  timelapsers.hpp  util.hpp  util_inl.hpp  warpers.hpp  warpers_inl.hpp
cpp/src/bag_tool/src/stitching/include/chamo/stitching/panod/: autocalib.hpp  blenders.hpp  camera.hpp  exposure_compensate.hpp  matchers.hpp  motion_estimators.hpp  seam_finders.hpp  timelapsers.hpp  util.hpp  util_inl.hpp  warpers.hpp  warpers_inl.hpp
cpp/src/bag_tool/src/stitching/src/: autocalib.cpp  blenders.cpp  camera.cpp  exposure_compensate.cpp  matchers.cpp  motion_estimators.cpp  precomp.hpp  seam_finders.cpp  timelapsers.cpp  util.cpp  warpers.cpp
cpp/src/bag_tool/src/vslam/: ._Initializer.cc  ._Initializer.h  ._KeyFrame.cc  ._KeyFrame.h  ._ORBextractor.cc  ._ORBextractor.h  ._ORBmatcher.cc  ._ORBmatcher.h  ._Optimizer.cc  ._Optimizer.h  ._PanoMap.cc  ._PanoMap.h  ._Random.cpp  ._Random.h  ._RayPoint.cc  ._RayPoint.h  ._Timestamp.cpp  ._Timestamp.h  ._so3.h  Initializer.cc  Initializer.h  KeyFrame.cc  KeyFrame.h  ORBextractor.cc  ORBextractor.h  ORBmatcher.cc  ORBmatcher.h  Optimizer.cc  Optimizer.h  PanoMap.cc  PanoMap.h  RayPoint.cc  RayPoint.h
cpp/src/g2o_catkin/: CMakeLists.txt  g2o_catkin.kdev4
cpp/src/g2o_catkin/.kdev4/: g2o_catkin.kdev4
cpp/src/g2o_catkin/src/types/: edge_se2.cpp  edge_se2_prior.cpp  vertex_se2.cpp
homepage/: index.html
ios/BarrageRenderer/BarrageEngine/: BarrageDispatcher.h
ios/chamo_danmu/danmu/danmu/: AppDelegate.h  AppDelegate.m  ViewController.h  ViewController.mm  main.m  socketio_api.h  socketio_api.m
ios/chamo_danmu/danmu/danmu.xcodeproj/: project.pbxproj
ios/chamo_danmu/danmu/danmu.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
ios/chamo_danmu/danmu/danmu/Base.lproj/: LaunchScreen.storyboard  Main.storyboard
ios/pano_recorder/pano_recorder/: AppDelegate.h  AppDelegate.m  SceneDelegate.h  ViewController.h  ViewController.mm  main.m  stitch_algo.cpp  stitch_algo.h
ios/pano_recorder/pano_recorder.xcodeproj/: project.pbxproj
ios/pano_recorder/pano_recorder.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
osm_roadnet/: align_traj.py  try_mongodb.py  upload.sh
osm_roadnet/libs/: filter_imgs.py
osm_roadnet/libs/chamo_common/: icp.py
pano_ride/server/: File  app.py  db_tool.py  draw_imu.py  extract_cali_imgs.py  extract_img.sh  gps_process.py  init_graph.py  init_process.py  insv_process.py  map_app.py  move_oss_large_file.py  output_process.py  package_tool.py  pano_app.py  process_slam_result.py  seg_mp.py  slam_process.py  slam_process_gps.py  start.sh  try_opencv.py  upload.sh
pano_ride/server/DataExtractor/: README.md
pano_ride/server/DataExtractor/InsMetadataSDK/example/: main.cc
pano_ride/server/DataExtractor/InsMetadataSDK/include/: common.h  metaData.h
pano_ride/server/cpp/: CMakeLists.txt
pano_ride/server/cpp/include/: IMUConverter.h  g2otypes.h
pano_ride/server/cpp/src/: convert_to_visual_map.cc  imu_tools.cpp
pano_ride/server/libs/: config.py  extract_insv.py  filter_imgs.py
pano_ride/server/libs/chamo_common/: util.py
pano_ride/server/native/: stitcherSDKDemo
pano_ride/server/native/example/: main.cc
pano_ride/server/native/include/stitcher/: common.h  stitcher.h  version.h
pano_ride/server/static/html/: demo_three.css  edit.css  edit.html  edit3d.css  edit3d.html  edit_list.html  index.html  map.css  map.html  pano.css  pano.html  pano_edit_mobile.html  pano_maps.html  pano_wechat.html  pano_wechat_panel.html  upload.html
pano_ride/server/static/js/: edit.js  edit3d.js  main.js  map.js  pano.js  pano_edit_mobile.js  pano_maps.js  pano_wechat.js  pano_wechat_panel.js  upload.js
pano_ride/server/vslam/: CMakeLists.txt  chamo.yaml
pano_ride/server/vslam/example/: CMakeLists.txt  run_image_localization.cc  run_image_slam.cc
pano_ride/server/vslam/src/openvslam/: global_optimization_module.cc  mapping_module.cc  system.cc  (+1 more)
pk_loc/pk_loc.xcodeproj/: project.pbxproj
pk_loc/pk_loc.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
script/: get_pano_marker.py
server/: app.py  process_map.py  test1.py
server/static/: webgl_loader_ply.html
server/templates/: index.html  test.html
src/: main.cc
ws_xcode/pano_ride/pano_ride.xcodeproj/: project.pbxproj
ws_xcode/pano_ride/pano_ride.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
(+24 files in other folders)
